Updated xero-php-oauth2 to 1.0.3
Updated storage and callback to get JWT claims (id_tokens) for storage and decoding
Updated Xero buttons.

--- a/xero-sdk-ui/templates/index.handlebars
+++ b/xero-sdk-ui/templates/index.handlebars
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
 	<div class="col">
-		<a href="{{requestTokenUrl}}"><img src="xero-sdk-ui/images/connect_xero_button_blue.png">
+		<a href="{{requestTokenUrl}}"><img src="xero-sdk-ui/images/connect-blue.svg">
 		</a>
 	</div>
 </div>
